--- a/index4.html
+++ b/index4.html
@@ -28,6 +28,7 @@
         </div>
         <div class="local"><a href="" class="in">Войти в личный кабинет</a>  </div>
   </div> 
+  asdasdasdasfasfasfasfasf
   
   <div class="banner"> 
 
